# hermes-webui

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  PR_NOTES.md  README.md  ROADMAP.md  SPRINTS.md  TESTING.md  bootstrap.py  ctl.sh  docker_init.bash  mcp_server.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: conversation-lifecycle.yml
api/: agent_health.py  agent_sessions.py  auth.py  background_process.py  compression_anchor.py  config.py  extensions.py  gateway_chat.py  models.py  oauth.py  onboarding.py  process_event_utils.py  profiles.py  providers.py  route_approvals.py  routes.py  run_journal.py  session_recovery.py  state_sync.py  streaming.py  system_health.py  turn_journal.py  updates.py  upload.py  workspace.py  worktrees.py
docs/: EXTENSIONS.md
docs/architecture/: stable-assistant-turn-anchor-phase0.md
docs/rfcs/: README.md  hermes-run-adapter-contract.md  webui-run-state-consistency-contract.md
models/: index.html
scripts/lib/: health_probe.sh
static/: __init__.py  assistant_turn_anchors.js  boot.js  commands.js  i18n.js  index.html  messages.js  onboarding.js  panels.js  sessions.js  style.css  ui.js  workspace.js
tests/: browser_conversation_lifecycle.py  cdp_native_scrollbar_test.py  cdp_scrollbar_behavioral.py  conftest.py  test-evidence-summary.md  test-results-cdp-behavioral.txt  test-results-native-scrollbar.txt  test-results-virtualization.txt  test-results.txt  test_1059_settings_picker_active_state.py  test_1062_busy_input_modes.py  test_1466_sidebar_cancel_clarify.py  test_anchor_fallback_ownership.py  test_approval_queue.py  test_approval_sse.py  test_approval_unblock.py  test_auto_compression_card.py  test_bootstrap_discover_agent.py  test_bootstrap_python_selection.py  test_cancel_stream_owner_guard.py  test_chinese_locale.py  test_compression_snapshot_runtime_clear.py  test_context_history_sanitization.py  test_cron_manual_run_persistence.py  test_ctl_script.py  test_custom_provider_prefix_collisions.py  test_czech_locale.py  test_docs_gitignore_policy.py  test_extension_hooks.py  test_gateway_approval_runs_api.py  test_gateway_sync.py  test_inflight_send_start_race.py  test_inflight_stream_reuse.py  test_insights.py  test_issue1013_handoff_dock.py  test_issue1217_transcript_compaction.py  test_issue1361_cancel_data_loss.py  test_issue1362_codex_oauth_onboarding.py  test_issue1538_nous_live_catalog.py  test_issue1567_nous_picker_capacity_and_symmetry.py  (+101 more)
